force-app/main/default/objects/PricebookEntry/fields/Actual_Price__c.field-meta.xml
<CustomField>
    <fullName>Actual_Price__c</fullName>
    <label>Actual Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>