force-app/main/default/objects/PricebookEntry/fields/Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount__c</fullName>
    <description>Discount amount for the product applicable to this price book.</description>
    <inlineHelpText>Discount amount for the product applicable to this price book.</inlineHelpText>
    <label>Discount Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>