force-app/main/default/objects/PricebookEntry/fields/First_Order_Variation_Amt__c.field-meta.xml
<CustomField>
    <fullName>First_Order_Variation_Amt__c</fullName>
    <description>A field that enables charging a different price for the first order while using regular price for the rest of the SSIP Orders</description>
    <label>First Order Variation Amt</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>