force-app/main/default/objects/PricebookEntry/fields/First_Order_Variation_Qty__c.field-meta.xml
<CustomField>
    <fullName>First_Order_Variation_Qty__c</fullName>
    <label>First Order Variation Qty</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>