force-app/main/default/objects/PricebookEntry/fields/First_Repeat_Order_Lead_Days__c.field-meta.xml
<CustomField>
    <fullName>First_Repeat_Order_Lead_Days__c</fullName>
    <description>Field will calculate if we have to have any leverage on number of days we need to control to ship the product early to the customer.</description>
    <label>First Repeat Order Lead Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>