force-app/main/default/objects/PricebookEntry/fields/Medical_Advice_Number__c.field-meta.xml
<CustomField>
    <fullName>Medical_Advice_Number__c</fullName>
    <description>Field stores the medical advice number for the product.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Medical Advice Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>