force-app/main/default/objects/PricebookEntry/fields/Number_of_Repeat_Orders__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Repeat_Orders__c</fullName>
    <label>Number of Repeat Orders</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>