force-app/main/default/objects/PricebookEntry/fields/Optional_Subscription_Item__c.field-meta.xml
<CustomField>
    <fullName>Optional_Subscription_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Optional Subscription Item</label>
    <type>Checkbox</type>
</CustomField>