force-app/main/default/objects/PricebookEntry/fields/Split_Price__c.field-meta.xml
<CustomField>
    <fullName>Split_Price__c</fullName>
    <description>This field will be used to store the split price for VDEK and GWQ pricebook entries.</description>
    <label>Split Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>