force-app/main/default/objects/PricebookEntry/fields/Split_Qty__c.field-meta.xml
<CustomField>
    <fullName>Split_Qty__c</fullName>
    <description>This field is used for VDEK and GWQ pricebook where the cost estimates should be in split qty.</description>
    <label>Split Qty</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>