force-app/main/default/objects/PricebookEntry/fields/SSIP_Next_Order_In_Days__c.field-meta.xml
<CustomField>
    <fullName>SSIP_Next_Order_In_Days__c</fullName>
    <label>SSIP Next Order In Days</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>