force-app/main/default/objects/PricebookEntry/fields/SSIP_Periodic_Order_Quantity__c.field-meta.xml
<CustomField>
    <fullName>SSIP_Periodic_Order_Quantity__c</fullName>
    <label>SSIP Periodic Order Quantity</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>